--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.33",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-sketch-canvas": "^6.2.0",
     "simplex-noise": "^4.0.1",
